--- a/news/css/base.css
+++ b/news/css/base.css
@@ -1,4 +1,20 @@
 
+*{
+    padding: 0;
+    margin: 0;
+}
+
+/* 分割线样式 */
+hr{
+    margin: 1em auto;
+    border: 1px dashed #919aa1;
+    max-width: 800px;
+    align-self: center;
+}
+section p{
+    text-align: justify;
+}
+
 #banner{
     position: relative;
     width: 100%;
@@ -8,11 +24,21 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+section h1{
+    text-align: center;
+    font-size: 3em;
+}
+/* 每一段前面的文字部分 */
+.quto{
+    max-width: 800px;
+    margin: 1em auto;
+    font-size: 1.4em;
+}
 #title{
     position: relative;
     z-index: 10;
 }
-#title p,h1,h3{
+#title p,#title h1,#title h3{
     margin: 1em;
     color: #fff;
 }
