--- a/news/css/base.css
+++ b/news/css/base.css
@@ -15,6 +15,13 @@ body{
     text-transform: uppercase;
 }
 
+.secondTitle{
+    font-size: 1.2em;
+    font-weight: 500;
+    color: #444;
+    line-height: 2em;
+}
+
 @media (max-width: 600px){
     #contentControl{
         display: none;
@@ -22,6 +29,12 @@ body{
     .section{
         display: none;
     }
+}
+
+.leftalign{
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .loader{
@@ -116,6 +129,7 @@ section h1{
 }
 /* 每一段前面的文字部分 */
 .quto{
+    display: block;
     max-width: 800px;
     margin: 1em auto;
     font-size: 1.2em;
