--- a/news/css/style.css
+++ b/news/css/style.css
@@ -8,8 +8,9 @@
 a{text-decoration:none}
 ul{list-style:none}
 .product-section{padding-bottom:50px;position:relative;
-    background-color: rgb(177, 206, 177);
-    /* background:url(../static/img/productBase-features-bag.jpg) no-repeat;background-size:cover} */
+    /* background-color: rgb(177, 206, 177); */
+    background:url(../static/img/lol.jpg) no-repeat;
+    background-size:cover;
 }
 .product-title{padding:50px 10px 30px;font-weight:normal;font-size:36px;line-height:46px;color:#252b3a;text-align:center;color:#ffffff}
 .product-wrapper{max-width:1200px;padding-left:10px;padding-right:10px;margin-left:auto;margin-right:auto;position:relative}
@@ -30,7 +31,7 @@ ul{list-style:none}
 .features-item:hover i{width:75%;margin-left:13px;background:url(../static/img/productBase-features-timeline-hover.png) no-repeat;background-size:contain;background-position:right center}
 .features-item:hover a{background:url(../static/img/productBase-features-info.png) no-repeat;background-size:100% 100%}
 /*左右按钮*/
-.product-features .swiper-button-prev{width:30px;height:40%;left:-3em;top:60%;background:none}
+.product-features .swiper-button-prev{width:30px;height:40%;left:-3em;top:60%;background-color:rgba(255, 255, 255, .3)}
 .product-features .swiper-button-prev:after{content:"";display:inline-block;position:absolute;width:15px;height:30px;background:url(../static/img/productBase-features-left.png) no-repeat;background-size:100% 100%;top:50%;margin-top:-15px;left:50%;margin-left:-7px}
-.product-features .swiper-button-next{width:30px;height:40%;right:-3em;top:60%;background:none}
+.product-features .swiper-button-next{width:30px;height:40%;right:-3em;top:60%;background-color:rgba(255, 255, 255, .3)}
 .product-features .swiper-button-next:after{content:"";display:inline-block;position:absolute;width:15px;height:30px;background:url(../static/img/productBase-features-right.png) no-repeat;background-size:100% 100%;top:50%;margin-top:-15px;left:50%;margin-left:-7px}
